# selenium-make

./: README.md  pyproject.toml  slm.py  test.py  utils.py
selenium_make/: __init__.py  auto_setup.py
slm/: __init__.py  auto_setup.py  utils.py
